# medium

./: Cargo.toml  README.md
add_trait/: Cargo.toml
add_trait/src/: main.rs
beginning_tips/: Cargo.toml
beginning_tips/rsc/: token.txt
beginning_tips/src/: enumerate.rs  iflet.rs  include_str_and_bytes.rs  lib.rs  read_slices_instead_of_vec.rs  result.rs  self.rs
generify_with_compiler_errors/: Cargo.toml
generify_with_compiler_errors/src/: main.rs
integer_arithmetics/: Cargo.toml
integer_arithmetics/src/: main.rs
modules/: Cargo.toml
modules/src/: foo.rs  main.rs  newcomer.rs
modules/src/newcomer/: strings.rs
modules/src/veteran/: mod.rs  mul.rs
oncelock/: Cargo.toml
oncelock/src/: main.rs
scoped_threads/: Cargo.toml
scoped_threads/src/: before_scoped_threads.rs  with_scoped_threads.rs
src/: main.rs
