[package]
name = "generify_with_compiler_errors"
version = "0.1.0"
edition = "2021"
authors = ["Soto Estévez <ricardo@sotoestevez.dev>"]

[dependencies]
num = { workspace = true, default-features = true }
vector2d.workspace = true

[dev-dependencies]
rand = { workspace = true, features = [ "log" ] }